fix: change tabs on mobile, change table on empty, fix date picker font size (#5)

--- a/src/components/datePicker/datePicker.scss
+++ b/src/components/datePicker/datePicker.scss
@@ -217,11 +217,12 @@
 
 .rdp-head_cell {
   vertical-align: middle;
-  font-size: 0.75em;
+  font-size: 12px;
   font-weight: 700;
   text-align: center;
   height: 36px;
   padding: 0;
+  color: #989CAC;
 }
 
 .rdp-tbody {
@@ -257,6 +258,9 @@
   margin: 0;
   border: 2px solid transparent;
   border-radius: 8px;
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 24px;
 }
 
 .rdp-day_today:not(.rdp-day_outside):not(.rdp-day_selected):not(
